# numerical-integration

./: Cargo.toml  README.md
src/: basic.rs  lib.rs  romberg.rs
src/adaptive/: mod.rs  simpson.rs
src/newton_cotes/: closed.rs  mod.rs  open.rs
